# tree_modelling

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  compile_commands.json
libs/: glad.c
libs/glad/: glad.h
resources/old/options/: dragontree.json  reference.json
resources/old/tree_data/: OutputFile2.txt  OutputFile3.txt  malus_baccata_columnaris  newroots.data  nice_tree.data  reference.txt  roots.data  roots_malus.data  scanewroots.txt  tall_ellipsoid_pos9.data  test.data
resources/options/: auto_poplar.json  dragontree.json  irregular.json  malus.json  poplaresque1.json  reference.json  roots.json  scanew.json  stick.json
resources/repro/: README.md
resources/scripts/: autorun  organize.py
resources/shaders/: default.frag  default.vert  flat.frag  flat.vert
resources/tree_data/: Dragon.txt  Dragon2.txt  OutputFile.txt  OutputFile1.txt  bush_ra17.data  bush_raINF.data  ellipsoid_tree1.data  gnarled3_2.data  irregular_crown1.data  irregular_crown2.data  irregular_crown3.data  nice_tree.data  nice_tree_edited.data  oak2.data  oak4_4.data  poplaresque1.data  reference.txt  roots.data  scanewroots.txt  scanewshoot.txt  stick.data  test.data  test2.data  test3.data
resources/trees/dragonTree/: params.json  root.txt  shoot.txt
resources/trees/medTree/: observations.md  params.json  shoot.txt
resources/trees/shortBlade/: observations.md  params.json  shoot.txt
resources/trees/shortBlade2/: blobby.json  observations.txt  root.txt  tree.txt
resources/trees/stick1/: params.json  root.txt  shoot.txt  shoot1.txt
resources/trees/stick2/: params.json  root.txt  shoot.txt
resources/trees/tallButtress/: observations.md  params.json
resources/trees/tallFlatRoots/: observations.md  params.json  shoot.txt
resources/trees/template/: params.json  root.txt  shoot.txt
resources/trees/tree1/: observations.md  params.json  root.txt
resources/trees/tree2/: observations.md  params.json
resources/trees/tree3/: observations.md  params.json  shoot.txt
resources/trees/tree4/: params.json  root.txt
resources/trees/weirdCrown/: observations.md  params.json  shoot.txt
scripts/: auto_run
src/: .grid.cpp.swp  .grid.h.swp  .main.cpp.swp  EBO.cpp  EBO.h  VAO.cpp  VAO.h  VBO.cpp  VBO.h  camera.cpp  camera.h  const.h  grid.cpp  grid.h  main.cpp  mesh.cpp  mesh.h  shader.cpp  shader.h
src/rendering/: EBO.cpp  EBO.h  VAO.cpp  VAO.h  VBO.cpp  VBO.h  camera.cpp  camera.h  mesh.cpp  mesh.h  shader.cpp  shader.h
src/tree/: grid.cpp  grid.h  implicit.cpp  implicit.h  kdtree.cpp  kdtree.h  skeleton.cpp  skeleton.h  strands.cpp  strands.h
src/util/: .fileContents.cpp.swp  color.cpp  color.h  fileContents.cpp  fileContents.h  geometry.cpp  geometry.h  stopwatch.cpp  stopwatch.h
